[gd_scene load_steps=2 format=3 uid="uid://clkix73wcthvu"]

[ext_resource type="Script" path="res://Scenes/UI/hud.gd" id="1_qcr3l"]

[node name="Hud" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_qcr3l")
handle_mute = null
handle_pause = null

[node name="filter" type="ColorRect" parent="."]
visible = false
modulate = Color(0, 0, 0, 0.490196)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -78.0
offset_right = 78.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_constants/margin_top = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="pause" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
toggle_mode = true
text = "PAUSE"
metadata/_edit_use_anchors_ = true

[node name="mute" type="CheckButton" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0, 0, 0, 0.784314)
text = "MUTE"

[node name="PanelContainer" type="PanelContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 75
text = "YOU PAUSED"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10

[node name="quit" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 30
text = "QUIT"

[connection signal="toggled" from="MarginContainer/HBoxContainer/pause" to="." method="pause_pressed"]
[connection signal="toggled" from="MarginContainer/HBoxContainer/pause" to="PanelContainer" method="set_visible"]
[connection signal="toggled" from="MarginContainer/HBoxContainer/mute" to="." method="mute_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/quit" to="." method="quit_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/quit" to="PanelContainer" method="set_visible" binds= [false]]
